welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: reassignment to val
			x= true;
                         ^