welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var x:Boolean= false;

def col() {
	for (x<-0 to 6) {
		avance()
		if (estSurBiscuit) {
			setY(0);
			x= true;
		}
	}
	droite();
	avance();
	gauche();
}

def haveBaggle():Boolean = {
	col();
	return x
}
